# blender-scene-generator

./: .env.example  .gitignore  CLAUDE.md  README.md  USAGE.md  conftest.py  pyproject.toml  run-dev.sh  run.ps1  run.sh
blender_scene/: __init__.py  blender_addon.py  bridge.py  hooks.py  main.py  plugin.py  requirements.txt  server.py  state.py  tools.py  workflow.py
blender_scene/tests/: test_bridge.py  test_hooks.py  test_server.py  test_tools.py  test_workflow.py
docs/: packaging.md
docs/examples/: rainy_neon_alley.blend
examples/: rainy_neon_alley.md  simple_desk_scene.md
scripts/: _run_common.sh
static/: index.html
